# coolchatty

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TODO.md
scripts/: verify-dist.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/macos/: entitlements.plist
src-tauri/src/: audio.rs  commands.rs  errors.rs  history.rs  hotkey.rs  hotkeys.rs  main.rs  paste.rs  realtime.rs  settings.rs  state.rs  websocket.rs
